force-app/main/default/objects/DRC_NBC_Lead_Product__c/DRC_NBC_Lead_Product__c.object-meta.xml
<CustomObject>
    <label>Lead Product</label>
    <nameField>
        <displayFormat>PRO-{0000}</displayFormat>
        <label>Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>