force-app/main/default/objects/DRC_NBC_Lead_Product__c/fields/DRC_NBC_Others_Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Others_Custom_Product__c</fullName>
    <formula>DRC_NBC_Lead__r.DRC_NBC_Others_Custom_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Others Custom Product</label>
    <type>Text</type>
</CustomField>