force-app/main/default/objects/DRC_NBC_Lead_Product__c/fields/DRC_NBC_Product__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lead Products</relationshipLabel>
    <relationshipName>Lead_Products</relationshipName>
    <type>Lookup</type>
</CustomField>